--- a/frontend/src/common/sidebar/sidebar.css
+++ b/frontend/src/common/sidebar/sidebar.css
@@ -9,7 +9,10 @@
 
 .htxt {
     text-align: left;
-    padding: 0.75em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-right: 1.5em;
+    padding-left: 0.7em;
     margin-left: 0.5em;
     background: none;
     border: 0;
