--- a/frontend/src/pages/ucenik/components/walletCard.css
+++ b/frontend/src/pages/ucenik/components/walletCard.css
@@ -1,83 +1,83 @@
 .wallet {
-    
-    display: block;
     width: 100%;
-    height: 340px;
-    background: #444;
+    height: 100%;
+    background-color: #444;
     border-radius: 15px;
-    box-shadow: 0px 0px 120px rgba(40,40,40,0.8);
-    z-index: 900;
-    transform: translateY(-10px);
-  }
-  
-  #logo {
+    box-shadow: 0px 0px 120px rgba(40, 40, 40, 0.8);
+    padding-top: 50px;
+}
+
+#logo {
     position: absolute;
     display: block;
     z-index: 200;
     width: 60px;
     bottom: 40px;
     left: 40px;
-  }
-  
-  /* ----- Departments ----- */
-  
-  .department {
-    position: absolute;
+}
+
+/* ----- Departments ----- */
+
+.department {
+    position: relative;
     display: block;
-    width: 90%;
+    width: 80%;
     background: #444;
     left: 0;
     right: 0;
     margin: auto;
-    border-top: 1px dashed rgba(100,100,100,1);
-  }
-  
-  #one {
+    border-top: 1px dashed rgba(100, 100, 100, 1);
+}
+
+#one {
     bottom: 0;
     height: 170px;
     z-index: 100;
-  }
-  
-  #two {
+}
+
+#two {
     bottom: 50px;
     height: 170px;
     z-index: 50;
-  }
-  
-  #three {
+}
+
+#three {
     bottom: 100px;
     height: 170px;
     z-index: 0;
-  }
-  
-  /* ----- Cards ----- */
-  
-  .card {
-    position: absolute;
-    display: block;
+}
+
+/* ----- Cards ----- */
+
+.card {
     width: 80%;
-    height: 210px;
-    left: 0;
-    right: 0;
+    height: 50px;
+    right: 20;
     margin: auto;
-    z-index: 90;
     bottom: 0;
+    margin-bottom: 40px;
     border-radius: 10px;
-    transition: transform 1s;
-  }
-  .card:hover{
-    transform: translateY(-150px);
-  }
-  
-  #visa {
+    transition: transform 0.25s;
+    transition: 0.25s;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.card:hover {
+    padding-top: 15px;
+    transform: translateY(-15px);
+    margin-bottom: 25px;
+}
+
+#visa {
     position: absolute;
     display: block;
     width: 60px;
     top: 12px;
     right: 20px;
-  }
-  
-  .card h1 {
+}
+
+/* .card h1 {
     display: inline-block;
     font-family: 'Oswald';
     font-weight: 300;
@@ -86,9 +86,9 @@
     width: 100%;
     margin: 85px 0px 0px 50px;
     text-decoration: none;
-  }
-  
-  .card h2 {
+}
+
+.card h2 {
     display: inline-block;
     font-family: 'Oswald';
     font-weight: 300;
@@ -97,9 +97,9 @@
     margin: 0;
     width: 30%;
     margin: 0px 0px 0px 50px;
-  }
-  
-  .card p {
+}
+
+.card p {
     display: inline-block;
     font-family: 'Lato';
     font-weight: 900;
@@ -108,19 +108,19 @@
     margin: 0;
     width: 30%;
     margin: 15px 0px 0px 50px;
-  }
-  
-  #card1 {
+} */
+
+#card1 {
     background: #7533FF;
     z-index: 100;
-  }
-  
-  #card2{
+}
+
+#card2 {
     background: #FF473B;
     z-index: 40;
-  }
-  
-  #card3{
+}
+
+#card3 {
     background: #5BB6FF;
     z-index: 0;
-  }
+}
