--- a/frontend/src/pages/ucenik/components/appbar.css
+++ b/frontend/src/pages/ucenik/components/appbar.css
@@ -13,8 +13,16 @@
   position: absolute;
   right: 1em;
   display: inline;
+  transition: color 1s;
    }
+
+  
    #nameTag:hover{
     background-color: #283593;
     cursor: pointer;
+  }
+  @keyframes BackgroundGradient {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
   }
