--- a/frontend/src/pages/ucenik/components/walletCard.css
+++ b/frontend/src/pages/ucenik/components/walletCard.css
@@ -1,30 +1,28 @@
 .wallet {
-    
     display: block;
     width: 80%;
-    height: 340px;
+    height: 90%;
     background: #444;
     border-radius: 15px;
-    box-shadow: 0px 0px 120px rgba(40,40,40,0.8);
     z-index: 900;
     transform: translateY(-10px);
-    margin-right:2vw;
-    margin-top: 2vw; 
+    margin-right: 2vw;
+    margin-top: 2vw;
     color: white;
-  }
-  
-  #logo {
+}
+
+#logo {
     position: absolute;
     display: block;
     z-index: 200;
     width: 60px;
     bottom: 40px;
     left: 40px;
-  }
-  
-  /* ----- Departments ----- */
-  
-  .department {
+}
+
+/* ----- Departments ----- */
+
+.department {
     position: absolute;
     display: block;
     width: 90%;
@@ -32,31 +30,31 @@
     left: 0;
     right: 0;
     margin: auto;
-    border-top: 1px dashed rgba(100,100,100,1);
-  }
-  
-  #one {
+    border-top: 1px dashed rgba(100, 100, 100, 1);
+}
+
+#one {
     bottom: 0;
     height: 170px;
     z-index: 100;
-  }
-  
-  #two {
+}
+
+#two {
     bottom: 50px;
     height: 170px;
     z-index: 50;
-  }
-  
-  #three {
+}
+
+#three {
     bottom: 100px;
     height: 170px;
     z-index: 0;
-  }
-  
-  /* ----- Cards ----- */
-  
-  .card {
-    position: absolute; 
+}
+
+/* ----- Cards ----- */
+
+.card {
+    position: absolute;
     display: block;
     width: 80%;
     height: 210px;
@@ -68,27 +66,28 @@
     border-radius: 10px;
     transition: transform 1s;
     color: white;
-  }
-  .card:hover{
+}
+
+.card:hover {
     transform: translateY(-150px);
-  }
-  
-  
-  #card1 {
-    background: #283593;
+}
+
+#card1 {
+    background: #2e3ca1;
     z-index: 100;
-  }
-  
-  #card2{
-    background: #C62828;
+}
+
+#card2 {
+    background: rgb(209, 55, 55);
     z-index: 40;
-  }
-  
-  #card3{
-    background: #515FB5;
+}
+
+#card3 {
+    background: rgb(95, 108, 194);
     z-index: 0;
-  }
-  .walletvalue{
+}
+
+.walletvalue {
     float: right;
     color: white;
-  }
+}
